<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_shopping_cart_black_36dp"
        android:title="@string/cart"
        android:orderInCategory="1"
        android:id="@+id/cart"
        app:showAsAction="always"
        android:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:id="@+id/account"
        android:title="@string/myaccount"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="3"
        android:title="@string/logout"/>

    <item
        android:id="@+id/exit"
        android:orderInCategory="4"
        android:title="@string/exit"/>
</menu>