<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mycompany.medsconnect.MedDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchmed"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medeg"
        android:inputType="text"
        android:id="@+id/searchmed"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>
